welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:4: error: ')' expected but 'return' found.
  return b} 
  ^